--- a/_config.yml
+++ b/_config.yml
@@ -2,4 +2,4 @@ title: Sabor Hot Sauce
 description: Sabor! salsas are handmade in small batches in Austin, TX since 1981.
 baseurl: "" # you might need to set this if you're using a project page
 url: "https://yourusername.github.io" # replace 'yourusername' with your GitHub username
-theme: minima
+theme: tactile
